--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,10 @@ artnfact-mcp = "main:main"
 
 [tool.uv]
 package = true
+
+[build-system]
+requires = ["setuptools>=68.0"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = ["main", "database", "utils"]
